# bridge-table-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yml
src/: auth.rs  bots.rs  config.rs  dealer.rs  main.rs  rooms.rs  sessions.rs  table.rs
src/bots/: bba.rs  ben.rs
src/db/: mod.rs
src/engine/: auction.rs  mod.rs  play.rs
src/observability/: events.rs  logging.rs  metrics.rs  mod.rs
src/routes/: admin.rs  dashboard.rs  health.rs  metrics.rs  mod.rs  ws.rs
wwwroot/: dashboard.html
