[package]
name = "bridge-table-service"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
publish = false

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

prometheus = "0.13"
once_cell = "1"

chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

bridge-types = { git = "https://github.com/bridge-craftwork/bridge-types" }
bridge-encodings = { git = "https://github.com/bridge-craftwork/bridge-encodings" }

# Sibling repos as sister directories (developer Mac and Docker build share
# this layout — see README "Sibling crate path-deps").
[patch."https://github.com/bridge-craftwork/bridge-types"]
bridge-types = { path = "../bridge-types" }

[patch."https://github.com/bridge-craftwork/bridge-encodings"]
bridge-encodings = { path = "../bridge-encodings" }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
